MDEV-12915 ST_Centroid does not return the same result than MySQL.

Calculation of the polygon's centroid fixed.